@@ -102,6 +102,11 @@
 	<menuitem name="EditCutIP" action="EditCut"/>
 	<menuitem name="EditCopyIP" action="EditCopy"/>
 	<menuitem name="EditPasteIP" action="EditPaste"/>
+	<separator />
+	<menuitem name="OpenImageIP" action="OpenImage"/>
+	<menuitem name="SaveImageAsIP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundIP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationIP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyDocumentPopup" action="PopupAction">
@@ -113,6 +118,11 @@
 	<separator name="DPSep2"/>
 	<menuitem name="SavePageAsDP" action="FileSaveAs"/>
 	<menuitem name="BookmarkPageDP" action="ContextBookmarkPage"/>
+	<separator />
+	<menuitem name="OpenImageDP" action="OpenImage"/>
+	<menuitem name="SaveImageAsDP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundDP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationDP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyFullscreenDocumentPopup" action="PopupAction">
@@ -126,6 +136,11 @@
 	<menuitem name="BookmarkPageFSDP" action="ContextBookmarkPage"/>
 	<separator />
 	<menuitem name="ViewToolbarFSDP" action="ViewToolbar"/>
+	<separator />
+	<menuitem name="OpenImageFSDP" action="OpenImage"/>
+	<menuitem name="SaveImageAsFSDP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundFSDP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationFSDP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyFramedDocumentPopup" action="PopupAction">
@@ -139,6 +154,11 @@
 	<menuitem name="BookmarkPageFDP" action="ContextBookmarkPage"/>
 	<separator />
 	<menuitem name="OpenFrameFDP" action="OpenFrame"/>
+	<separator />
+	<menuitem name="OpenImageFDP" action="OpenImage"/>
+	<menuitem name="SaveImageAsFDP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundFDP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationFDP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyFullscreenFramedDocumentPopup" action="PopupAction">
@@ -154,6 +174,11 @@
 	<menuitem name="OpenFrameFSFDP" action="OpenFrame"/>
 	<separator />
 	<menuitem name="ViewToolbarFSFDP" action="ViewToolbar"/>
+	<separator />
+	<menuitem name="OpenImageFSFDP" action="OpenImage"/>
+	<menuitem name="SaveImageAsFSFDP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundFSFDP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationFSFDP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyLinkPopup" action="PopupAction">
@@ -167,29 +192,11 @@
 	<menuitem name="DownloadLinkAsLP" action="DownloadLinkAs"/>
 	<menuitem name="BookmarkLinkLP" action="BookmarkLink"/>
 	<menuitem name="CopyLinkAddressLP" action="CopyLinkAddress"/>
-</popup>
-
-<popup name="EphyImagePopup" action="PopupAction">
-	<menuitem name="OpenImageIP" action="OpenImage"/>
-	<menuitem name="SaveImageAsIP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundIP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationIP" action="CopyImageLocation"/>
-</popup>
-
-<popup name="EphyImageLinkPopup" action="PopupAction">
-	<menuitem name="OpenLinkILP" action="OpenLink"/>
-        <menuitem name="OpenLinkInNewWindowILP" action="OpenLinkInNewWindow"/>
-	<menuitem name="OpenLinkInNewTabILP" action="OpenLinkInNewTab"/>
-	<separator name="ILPSep1"/>
-	<menuitem name="DownloadLinkILP" action="DownloadLink"/>
-	<menuitem name="DownloadLinkAsILP" action="DownloadLinkAs"/>
-	<menuitem name="BookmarkLinkILP" action="BookmarkLink"/>
-	<menuitem name="CopyLinkAddressILP" action="CopyLinkAddress"/>
-	<separator name="ILPSep2"/>
-	<menuitem name="OpenImageILP" action="OpenImage"/>
-	<menuitem name="SaveImageAsILP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundILP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationILP" action="CopyImageLocation"/>
+	<separator />
+	<menuitem name="OpenImageLP" action="OpenImage"/>
+	<menuitem name="SaveImageAsLP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundLP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationLP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyEmailLinkPopup" action="PopupAction">
@@ -197,16 +204,11 @@
 	<menuitem name="CopyEmailAddressItem" action="CopyEmailAddress"/>
 	<separator name="ELPSep0"/>
 	<menuitem name="EditCopyELP" action="EditCopy"/>
-</popup>
-
-<popup name="EphyImageEmailLinkPopup" action="PopupAction">
-	<menuitem name="SendEmailItem" action="SendEmail"/>
-	<menuitem name="CopyEmailAddressItem" action="CopyEmailAddress"/>
-	<separator name="IELPSep1"/>
-	<menuitem name="OpenImageIELP" action="OpenImage"/>
-	<menuitem name="SaveImageAsIELP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundIELP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationIELP" action="CopyImageLocation"/>
+	<separator />
+	<menuitem name="OpenImageELP" action="OpenImage"/>
+	<menuitem name="SaveImageAsELP" action="SaveImageAs"/>
+	<menuitem name="SetImageAsBackgroundELP" action="SetImageAsBackground"/>
+	<menuitem name="CopyImageLocationELP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyNotebookPopup" action="NotebookPopupAction">
