@@ -1,3 +1,13 @@
+2005-10-09  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* data/ui/epiphany-ui.xml:
+	* src/ephy-window.c: (show_embed_popup), 
+	(update_image_actions_visibility):
+
+	Eliminate the *Popup/*ImagePopup popup variants.
+	Add image context to all popups it can show up.
+	Display image context dynamically.
+	
 2005-10-09  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-shell.c:
